# GTB

./: .gitignore  CMakeLists.txt  example.json  main.cpp  readme.md
include/: Binding.hpp  BufferWriter.hpp  Generation.hpp  Grouping.hpp  Random.hpp  Sampler.hpp  Store.hpp  TEDDegree.hpp  TEDTimestamp.hpp  Utility.hpp  headers.hpp  schema.hpp  types.hpp
src/: Binding.cpp  BufferWriter.cpp  Generation.cpp  Grouping.cpp  TEDDegree.cpp  TEDTimestamp.cpp  Utility.cpp
